--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">HOME</a>
     <a href="register.html">REGISTRATION</a>
-    <a href="doc.html">PAYMENT</a>
+    <a href="doc.php">PAYMENT</a>
 
   </div>
 
